style.css
/* ... */
.post-title__content {
	grid-column: 8 span;
	max-width: 700px;
    display: flex;
    justify-content: center;
    flex-direction: column;
}

.post-category__title {
	font-size: 16px;
    color: var(--accent-color);
}

.author {
	display: flex;
    /*align-items: center;*/
    flex-direction: column;
    justify-content: center;
	grid-column: 3 span;
}

.author-img {
	max-width: 80px;
	border-radius: 50%;
}

.post-content {
	padding-bottom: 3rem;
}

.post-content__container {
	display: grid;
	grid-template-columns: repeat(4, 1fr);
	gap: var(--grid-gap);
	max-width: 1200px;
}

.post-wrapper {
	grid-column: 3 span;
	position: relative;
    padding: var(--grid-gap);
    width: 100%;
    height: 100%;
    border-radius: 20px;
    background-color: #fff;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
}

.post-meta {
	display: flex;
	align-items: center;
	margin-bottom: 30px;
}

.post-category {
	margin-right: 20px;
	display: inline-block;
	border-radius: 8px;
	padding: 8px 17px;
	font-size: 16px;
	line-height: 21px;
	color: var(--accent-color);
	background:#f7f8fD;
}

.post-date {
	font-size: 16px;
	line-height: 21px;
	color: rgba(47, 34, 34, 0.4);
}

.post-title {
	margin: 35px 0;
    font-size: 40px;
    line-height: 50px;
    color: #000;
}

.post p {
	margin: 0;
	margin-bottom: 10px;
	font-size: 18px;
	line-height: 27px;
	color: var(--dark-color);
}

.post > figure {
    margin: 0;
}

/* .post > p > a {
    color: var(--accent-color);
} */

body > main > section.content > div > div > p > a > span {
    color: var(--accent-color);
}

.post ul, .home ul, .post ol {
    font-size: 18px;
    line-height: 26px;
}

.post a {
	text-decoration-style: solid;
	text-decoration-line: underline;
	text-decoration-color: var(--accent-color);
}

.post h2:not(:first-child) {
	margin-top: 2rem;
}

.post h2 {
	font-weight: 500;
}

.post h3 {
	font-weight: 500;
	margin-bottom: 5px;
}

.post img {
	display: inline-block;
	object-fit: scale-down;
	border-radius: 20px;
	margin: 2rem 0;
}

.wp-block-quote {
	border-left: 3px solid var(--accent-color);
    padding: 1rem;
    background-color: #f1f2f8;
}

.post-links {
	padding-top: 35px;
	display: flex;
	align-items: center;
	justify-content: space-between;
	max-width: 800px;
}

.post-links__link {
	display: inline-flex;
	align-items: center;
	padding: 0 17px;
	height: 43px;
	background: rgba(93, 113, 221, 0.05);
	border-radius: 8px;
	font-size: 18px;
	color: var(--accent-color);
}

.post-links__link--prev {
	background-image: url(../osvita/img/prev.svg);
	background-repeat: no-repeat;
	background-position: 16px center;
	padding-left: 35px;
}

.post-links__link--next {
	background-image: url(../osvita/img/next.svg);
	background-repeat: no-repeat;
	background-position: calc(100% - 16px) center;
	padding-right: 35px;
}

/*--------------------------------------------------------------
# Category
--------------------------------------------------------------*/

.category-banner {
	height: 180px;
	background-color: #f1f2f8;
	display: flex;
	align-items: center;
	justify-content: center;
}

.category-banner__title {
	font-weight: 500;
	font-size: 30px;
	line-height: 38px;
	display: flex;
	color: var(--accent-color);
}



/*--------------------------------------------------------------
# Contacts
--------------------------------------------------------------*/

.contacts {
	padding: var(--grid-gap) 0;
}

.contacts__container {
	display: flex;
	justify-content: space-between;
}

.contacts__left {
    width: calc(50% - 20px);
	padding-top: 40px;
	padding-left: 120px;
	margin-bottom: 4rem;
}

.contacts__right {
	padding-right: 120px;
	width: calc(50% - 20px);
	margin-bottom: 4rem;
}

.contacts__title {
	margin-bottom: 32px;
	font-size: 30px;
	line-height: 38px;
}

.contacts-form-wrapper {
	padding: 40px;
	border-radius: 20px;
	background-color: #fff;
	box-shadow: 4px 8px 40px rgba(8, 24, 111, 0.2);
	/* max-height: 460px; */
}

.contacts-form_prof {
	padding: 40px 40px;
	border-radius: 20px;
	background-color: #ebd38480;
	/* max-height: 460px; */
}

.phone--contacts {
	display: inline-block;
	margin-bottom: 20px;
	font-weight: 400;
}

.address {
	margin-bottom: 40px;
	font-style: normal;
	font-weight: 400;
	font-size: 18px;
	line-height: 23px;
	padding-left: 25px;
	color: var(--accent-color);
	background-image: url(./img/pin.svg);
	background-position: left center;
	background-repeat: no-repeat;
}

.social {
	display: flex;
	align-items: center;
}

.social__justy-center {
	justify-content: center;
}

.social__item:not(:last-child) {
	margin-right: 20px;
}

.social__link {
	display: block;
	width: 40px;
	height: 40px;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
}

.social__link--fb {
	background-image: url(./img/fb.svg);
}

.social__link--vk {
	background-image: url(./img/vk.svg);
}

.social__link--insta {
	background-image: url(./img/insta.svg);
}

.social__link--tw {
	background-image: url(./img/tg.svg);
}

/*.callback-form__input {
	margin-bottom: 20px;
}*/

.callback-form__textarea {
	resize: none;
	margin-bottom: 20px;
	padding-top: 10px;
	height: 81px;
}

/*--------------------------------------------------------------
# 404
--------------------------------------------------------------*/

.not-found {
	padding: 125px 0;
}

.not-found__img {
	margin-bottom: 40px;
}

.not-found__title {
	margin-bottom: 40px;
	font-size: 30px;
	line-height: 38px;
}

.not-found__container {
	display: flex;
	flex-direction: column;
	align-items: center;
}

.not-found__back {
	display: inline-flex;
	align-items: center;
	padding: 0 17px;
	height: 43px;
	background: rgba(93, 113, 221, 0.05);
	border-radius: 8px;
	font-size: 18px;
	color: var(--accent-color);
}

.not-found__back svg {
	margin-right: 7px;
}
/* ... */

